--- a/public/404.html
+++ b/public/404.html
@@ -3,121 +3,66 @@
 <head>
   <title>Page does not exist (404)  || GradeCraft</title>
   <link rel="stylesheet" type="text/css" href="/css/background.css">
+  
 </head>
 
 <body>
-  
-  <div class="back-color-wash">
-  </div>
+
+  <div class="back-color-wash"></div>
 
   <div class="back-sky-container">
     <div class="cloud cloud-1">
-      <div class="cloud-bubble">
-      <div class="cloud-bubble">
-      <div class="cloud-bubble">
-      <div class="cloud-bubble">
-      <div class="cloud-bubble">
+      <div class="cloud-bubble"></div>
+      <div class="cloud-bubble"></div>
+      <div class="cloud-bubble"></div>
+      <div class="cloud-bubble"></div>
+      <div class="cloud-bubble"></div>
     </div>
+
     <div class="cloud cloud-2">
-      <div class="cloud-bubble">
-      <div class="cloud-bubble">
-      <div class="cloud-bubble">
-      <div class="cloud-bubble">
-      <div class="cloud-bubble">
+      <div class="cloud-bubble"></div>
+      <div class="cloud-bubble"></div>
+      <div class="cloud-bubble"></div>
+      <div class="cloud-bubble"></div>
+      <div class="cloud-bubble"></div>
     </div>
     <div class="cloud cloud-3">
-      <div class="cloud-bubble">
-      <div class="cloud-bubble">
-      <div class="cloud-bubble">
-      <div class="cloud-bubble">
-      <div class="cloud-bubble">
+      <div class="cloud-bubble"></div>
+      <div class="cloud-bubble"></div>
+      <div class="cloud-bubble"></div>
+      <div class="cloud-bubble"></div>
+      <div class="cloud-bubble"></div>
     </div>
     <div class="cloud cloud-4">
-      <div class="cloud-bubble">
-      <div class="cloud-bubble">
-      <div class="cloud-bubble">
-      <div class="cloud-bubble">
-      <div class="cloud-bubble">
+      <div class="cloud-bubble"></div>
+      <div class="cloud-bubble"></div>
+      <div class="cloud-bubble"></div>
+      <div class="cloud-bubble"></div>
+      <div class="cloud-bubble"></div>
     </div>
     <div class="cloud cloud-5">
-      <div class="cloud-bubble">
-      <div class="cloud-bubble">
-      <div class="cloud-bubble">
-      <div class="cloud-bubble">
-      <div class="cloud-bubble">
+      <div class="cloud-bubble"></div>
+      <div class="cloud-bubble"></div>
+      <div class="cloud-bubble"></div>
+      <div class="cloud-bubble"></div>
+      <div class="cloud-bubble"></div>
     </div>
   </div>
 
   <div class="background-container">
     <div class="hills">
-      <div class="hill hill-1 hidden">
-      <div class="hill hill-2 hidden">
-      <div class="hill hill-3 hidden">
+      <div class="hill hill-1 hidden"></div>
+      <div class="hill hill-2 hidden"></div>
+      <div class="hill hill-3 hidden"></div>
     </div>
 
     <div class="background-left-wrapper">
       <div class="mountain hidden">
-        <div class="mountain-left-side">
+        <div class="mountain-left-side"></div>
         <div class="mountain-peak">
           <div class="mountain-peak-left-spacer"></div>
           <div class="mountain-peak-left-side"></div>
-        <div class="mountain-right-side">
-        <div class="mountain-peak">
-          <div class="mountain-peak-right-spacer"></div>
-          <div class="mountain-peak-right-side"></div>
-        <div class="mountain-root">
-        <div class="mountain-root right">
-      <div class="mountain mountain-2 hidden">
-        <div class="mountain-left-side">
-        <div class="mountain-peak">
-          <div class="mountain-peak-left-spacer"></div>
-          <div class="mountain-peak-left-side"></div>
-        <div class="mountain-right-side">
-        <div class="mountain-peak">
-          <div class="mountain-peak-right-spacer"></div>
-          <div class="mountain-peak-right-side"></div>
-        <div class="mountain-root">
-        <div class="mountain-root right">
-      <div class="mountain mountain-3 hidden">
-        <div class="mountain-left-side">
-        <div class="mountain-peak">
-          <div class="mountain-peak-left-spacer"></div>
-          <div class="mountain-peak-left-side"></div>
-        <div class="mountain-right-side">
-        <div class="mountain-peak">
-          <div class="mountain-peak-right-spacer"></div>
-          <div class="mountain-peak-right-side"></div>
-        <div class="mountain-root">
-        <div class="mountain-root right">
-
-    <div class="background-right-wrapper">
-      <div class="mountain mountain-4 hidden">
-        <div class="mountain-left-side">
-        <div class="mountain-peak">
-          <div class="mountain-peak-left-spacer"></div>
-          <div class="mountain-peak-left-side"></div>
-        <div class="mountain-right-side">
-        <div class="mountain-peak">
-          <div class="mountain-peak-right-spacer"></div>
-          <div class="mountain-peak-right-side"></div>
-        <div class="mountain-root">
-        <div class="mountain-root right">
-      <div class="mountain mountain-5 hidden">
-        <div class="mountain-left-side">
-        <div class="mountain-peak">
-          <div class="mountain-peak-left-spacer"></div>
-          <div class="mountain-peak-left-side"></div>
-        <div class="mountain-right-side">
-        <div class="mountain-peak">
-          <div class="mountain-peak-right-spacer"></div>
-          <div class="mountain-peak-right-side"></div>
-        <div class="mountain-root">
-        <div class="mountain-root right">
-      <div class="mountain mountain-6 hidden">
-        <div class="mountain-left-side">
-        <div class="mountain-peak">
-          <div class="mountain-peak-left-spacer"></div>
-          <div class="mountain-peak-left-side"></div>
+        </div>
         <div class="mountain-right-side"></div>
         <div class="mountain-peak">
           <div class="mountain-peak-right-spacer"></div>
@@ -125,7 +70,82 @@
         </div>
         <div class="mountain-root"></div>
         <div class="mountain-root right"></div>
+      </div>
+      <div class="mountain mountain-2 hidden">
+        <div class="mountain-left-side"></div>
+        <div class="mountain-peak">
+          <div class="mountain-peak-left-spacer"></div>
+          <div class="mountain-peak-left-side"></div>
+        </div>
+        <div class="mountain-right-side"></div>
+        <div class="mountain-peak">
+          <div class="mountain-peak-right-spacer"></div>
+          <div class="mountain-peak-right-side"></div>
+        </div>
+        <div class="mountain-root"></div>
+        <div class="mountain-root right"></div>
+      </div>
+      <div class="mountain mountain-3 hidden">
+        <div class="mountain-left-side"></div>
+        <div class="mountain-peak">
+          <div class="mountain-peak-left-spacer"></div>
+          <div class="mountain-peak-left-side"></div>
+        </div>
+        <div class="mountain-right-side"></div>
+        <div class="mountain-peak">
+          <div class="mountain-peak-right-spacer"></div>
+          <div class="mountain-peak-right-side"></div>
+        </div>
+        <div class="mountain-root"></div>
+        <div class="mountain-root right"></div>
+      </div>
     </div>
+
+    <div class="background-right-wrapper">
+      <div class="mountain mountain-4 hidden">
+        <div class="mountain-left-side"></div>
+        <div class="mountain-peak">
+          <div class="mountain-peak-left-spacer"></div>
+          <div class="mountain-peak-left-side"></div>
+        </div>
+        <div class="mountain-right-side"></div>
+        <div class="mountain-peak">
+          <div class="mountain-peak-right-spacer"></div>
+          <div class="mountain-peak-right-side"></div>
+        </div>
+        <div class="mountain-root"></div>
+        <div class="mountain-root right"></div>
+      </div>
+      <div class="mountain mountain-5 hidden">
+        <div class="mountain-left-side"></div>
+        <div class="mountain-peak">
+          <div class="mountain-peak-left-spacer"></div>
+          <div class="mountain-peak-left-side"></div>
+        </div>
+        <div class="mountain-right-side"></div>
+        <div class="mountain-peak">
+          <div class="mountain-peak-right-spacer"></div>
+          <div class="mountain-peak-right-side"></div>
+        </div>
+        <div class="mountain-root"></div>
+        <div class="mountain-root right"></div>
+      </div>
+      <div class="mountain mountain-6 hidden">
+        <div class="mountain-left-side"></div>
+        <div class="mountain-peak">
+          <div class="mountain-peak-left-spacer"></div>
+          <div class="mountain-peak-left-side"></div>
+        </div>
+        <div class="mountain-right-side"></div>
+        <div class="mountain-peak">
+          <div class="mountain-peak-right-spacer"></div>
+          <div class="mountain-peak-right-side"></div>
+        </div>
+        <div class="mountain-root"></div>
+        <div class="mountain-root right"></div>
+      </div>
+    </div>
+  </div>
 
 </body>
 </html>
