Restyled error pages

--- a/public/404.html
+++ b/public/404.html
@@ -12,52 +12,58 @@
 
   <div class="back-sky-container">
     <div class="cloud cloud-1">
-      <div class="cloud-bubble"></div>
-      <div class="cloud-bubble"></div>
-      <div class="cloud-bubble"></div>
-      <div class="cloud-bubble"></div>
-      <div class="cloud-bubble"></div>
+      <div class="cloud-bubble cloud-bubble-1"></div>
+      <div class="cloud-bubble cloud-bubble-12"></div>
+      <div class="cloud-bubble cloud-bubble-9"></div>
+      <div class="cloud-bubble cloud-bubble-7"></div>
+      <div class="cloud-bubble cloud-bubble-2"></div>
     </div>
 
     <div class="cloud cloud-2">
-      <div class="cloud-bubble"></div>
-      <div class="cloud-bubble"></div>
-      <div class="cloud-bubble"></div>
-      <div class="cloud-bubble"></div>
-      <div class="cloud-bubble"></div>
+      <div class="cloud-bubble cloud-bubble-1"></div>
+      <div class="cloud-bubble cloud-bubble-8"></div>
+      <div class="cloud-bubble cloud-bubble-3"></div>
+      <div class="cloud-bubble cloud-bubble-6"></div>
+      <div class="cloud-bubble cloud-bubble-1"></div>
     </div>
     <div class="cloud cloud-3">
-      <div class="cloud-bubble"></div>
-      <div class="cloud-bubble"></div>
-      <div class="cloud-bubble"></div>
-      <div class="cloud-bubble"></div>
-      <div class="cloud-bubble"></div>
+      <div class="cloud-bubble cloud-bubble-1"></div>
+      <div class="cloud-bubble cloud-bubble-2"></div>
+      <div class="cloud-bubble cloud-bubble-9"></div>
+      <div class="cloud-bubble cloud-bubble-4"></div>
+      <div class="cloud-bubble cloud-bubble-8"></div>
     </div>
     <div class="cloud cloud-4">
-      <div class="cloud-bubble"></div>
-      <div class="cloud-bubble"></div>
-      <div class="cloud-bubble"></div>
-      <div class="cloud-bubble"></div>
-      <div class="cloud-bubble"></div>
+      <div class="cloud-bubble cloud-bubble-2"></div>
+      <div class="cloud-bubble cloud-bubble-5"></div>
+      <div class="cloud-bubble cloud-bubble-9"></div>
+      <div class="cloud-bubble cloud-bubble-4"></div>
+      <div class="cloud-bubble cloud-bubble-12"></div>
     </div>
     <div class="cloud cloud-5">
-      <div class="cloud-bubble"></div>
-      <div class="cloud-bubble"></div>
-      <div class="cloud-bubble"></div>
-      <div class="cloud-bubble"></div>
-      <div class="cloud-bubble"></div>
+      <div class="cloud-bubble cloud-bubble-7"></div>
+      <div class="cloud-bubble cloud-bubble-2"></div>
+      <div class="cloud-bubble cloud-bubble-12"></div>
+      <div class="cloud-bubble cloud-bubble-1"></div>
+      <div class="cloud-bubble cloud-bubble-5"></div>
     </div>
   </div>
 
+  <div class="daylight message-container">
+    <div class="message">That page cannot be found. It must be lost in the clouds somewhere!</div>
+    <div class="back-to-site"><a href="https://www.gradecraft.com"> Get me out of here...</a></div>
+  </div>
+
+
   <div class="background-container">
     <div class="hills">
-      <div class="hill hill-1 hidden"></div>
-      <div class="hill hill-2 hidden"></div>
-      <div class="hill hill-3 hidden"></div>
+      <div class="hill hill-1 hill-position-1"></div>
+      <div class="hill hill-2 hill-position-3"></div>
+      <div class="hill hill-3 hill-position-2"></div>
     </div>
 
     <div class="background-left-wrapper">
-      <div class="mountain hidden">
+      <div class="mountain mountain-size-1">
         <div class="mountain-left-side"></div>
         <div class="mountain-peak">
           <div class="mountain-peak-left-spacer"></div>
@@ -71,7 +77,7 @@
         <div class="mountain-root"></div>
         <div class="mountain-root right"></div>
       </div>
-      <div class="mountain mountain-2 hidden">
+      <div class="mountain mountain-2  mountain-size-3">
         <div class="mountain-left-side"></div>
         <div class="mountain-peak">
           <div class="mountain-peak-left-spacer"></div>
@@ -85,7 +91,7 @@
         <div class="mountain-root"></div>
         <div class="mountain-root right"></div>
       </div>
-      <div class="mountain mountain-3 hidden">
+      <div class="mountain mountain-3 mountain-size-5">
         <div class="mountain-left-side"></div>
         <div class="mountain-peak">
           <div class="mountain-peak-left-spacer"></div>
@@ -102,7 +108,7 @@
     </div>
 
     <div class="background-right-wrapper">
-      <div class="mountain mountain-4 hidden">
+      <div class="mountain mountain-4 mountain-size-2">
         <div class="mountain-left-side"></div>
         <div class="mountain-peak">
           <div class="mountain-peak-left-spacer"></div>
@@ -116,7 +122,7 @@
         <div class="mountain-root"></div>
         <div class="mountain-root right"></div>
       </div>
-      <div class="mountain mountain-5 hidden">
+      <div class="mountain mountain-5 mountain-size-4">
         <div class="mountain-left-side"></div>
         <div class="mountain-peak">
           <div class="mountain-peak-left-spacer"></div>
@@ -130,7 +136,7 @@
         <div class="mountain-root"></div>
         <div class="mountain-root right"></div>
       </div>
-      <div class="mountain mountain-6 hidden">
+      <div class="mountain mountain-6 mountain-size-2">
         <div class="mountain-left-side"></div>
         <div class="mountain-peak">
           <div class="mountain-peak-left-spacer"></div>
