--- a/public/500.html
+++ b/public/500.html
@@ -208,6 +208,7 @@
   </div>
 
   <div class="night message-container">
+    <h1>Server Error</h1>
     <div class="message">It's so dark out! Something has gone wrong.</div>
     <div class="back-to-site"><a href="https://www.gradecraft.com">I want to go home.</a></div>
   </div>
