--- a/public/404.html
+++ b/public/404.html
@@ -50,8 +50,9 @@
   </div>
 
   <div class="daylight message-container">
-    <div class="message">That page cannot be found. It must be lost in the clouds somewhere!</div>
-    <div class="back-to-site"><a href="https://www.gradecraft.com"> Get me out of here...</a></div>
+    <h1>Page Not Found</h1>
+    <div class="message">It must be lost in the clouds somewhere!</div>
+    <div class="back-to-site"><a href="https://www.gradecraft.com">Take me home...</a></div>
   </div>
 
 
