--- a/public/422.html
+++ b/public/422.html
@@ -50,6 +50,7 @@
   </div>
 
   <div class="stormy message-container">
+    <h1>Change Rejected</h1>
     <div class="message">Stormy day! I cannot accept that change.</div>
     <div class="back-to-site"><a href="https://www.gradecraft.com"> Take me back to whence I came...</a></div>
   </div>
